--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,230 @@
+/* General Styles */
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #FFF6F6;
+  font-family: 'Montserrat';
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+h1 {
+  font-size: 350%;
+}
+
+/* HERO PAGE */
+
+.HeroPage .navbar1 {
+  margin-left: 100px;
+  margin-right: 30px;
+}
+
+.HeroPage nav a {
+  padding-left: 300px;
+  text-decoration: none;
+  color: rgb(221, 74, 135);
+  font-size: 20px
+}
+
+/* ABOUT US */
+.general img {
+  padding: 4px;
+  border-radius: 12px;
+}
+
+.container1, .img1 {
+  display: inline-block;
+}
+
+/* WHAT WE DO */
+.what-we-do {
+  display: inline-block;
+  background-color: #1A618B;
+  width: 100%;
+  height: 543px;
+}
+
+/* Form */
+label {
+  display: block;
+  color: #02172C;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 20px;
+}
+
+input {
+  width: 470px;
+  height: 10px;
+  border-style: hidden;
+  padding: 40px 40px;
+}
+
+textarea {
+  margin-top: 30px;
+  width: 550px;
+  height: 200px;
+  border-style: hidden;
+  display: block;
+}
+
+/* Footer */
+.footer1 {
+  background-color: #1A618B;
+  display: inline-block;
+  color: white;
+  width: 100%;
+  font-size: small;
+}
+
+.footer1 div {
+  float: left;
+  padding: 60px;
+}
+
+.footer1 a {
+  text-decoration: none;
+  color: white;
+}
+
+.socials img {
+  padding-left: 20px;
+}
+
+/* Media Queries for Responsiveness */
+
+/* Tablet */
+@media (max-width: 768px) {
+  .HeroPage {
+      margin-left: 20px;
+      margin-right: 20px;
+      padding-left: 20px;
+      padding-right: 20px;
+  }
+
+  .HeroPage nav a {
+      padding-left: 50px;
+  }
+
+  .HeroPage .navbar1 {
+      margin-left: 0;
+      margin-right: 0;
+  }
+
+  .general {
+      margin-top: 50px;
+      float: none;
+      margin-right: 0;
+  }
+
+  .About {
+      flex-direction: column;
+      align-items: center;
+  }
+
+  .About img {
+      width: 100%;
+      height: auto;
+  }
+
+  .what-we-do {
+      height: auto;
+      padding: 20px;
+  }
+
+  .what-we-do div {
+      width: 100%;
+      margin-bottom: 20px;
+  }
+
+  input, textarea {
+      width: 100%;
+      padding: 10px;
+  }
+
+  .footer1 {
+      font-size: smaller;
+      text-align: center;
+  }
+
+  .footer1 div {
+      float: none;
+      padding: 20px;
+  }
+}
+
+/* Mobile */
+@media (max-width: 480px) {
+  .HeroPage {
+      margin-left: 10px;
+      margin-right: 10px;
+      padding-left: 10px;
+      padding-right: 10px;
+  }
+
+  .HeroPage nav a {
+      padding-left: 20px;
+      font-size: 14px;
+  }
+
+  .HeroPage .navbar1 {
+      margin-left: 0;
+      margin-right: 0;
+      display: block;
+      text-align: center;
+  }
+
+  .general {
+      margin-top: 20px;
+      float: none;
+      margin-right: 0;
+      text-align: center;
+  }
+
+  .general img {
+      width: 100%;
+      height: auto;
+  }
+
+  .About {
+      flex-direction: column;
+      align-items: center;
+  }
+
+  .About img {
+      width: 100%;
+      height: auto;
+  }
+
+  .what-we-do {
+      height: auto;
+      padding: 10px;
+  }
+
+  .what-we-do div {
+      width: 100%;
+      margin-bottom: 10px;
+  }
+
+  .contact {
+      padding-left: 10px;
+      padding-right: 10px;
+  }
+
+  input, textarea {
+      width: 100%;
+      padding: 10px;
+  }
+
+  .footer1 {
+      font-size: smaller;
+      text-align: center;
+  }
+
+  .footer1 div {
+      float: none;
+      padding: 10px;
+  }
+
+  .footer1 img {
+      width: 50px;
+      height: auto;
+  }
 }
