--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 /* General Styles */
 body {
   background-color: #FFF6F6;
-  font-family: Georgia;
+  font-family: Montserrat;
 }
 
 
@@ -96,16 +98,14 @@ background-color: white;
 
 }
 
+
+
 /* Media Queries for Responsiveness */
 
 /* Tablet */
 @media (max-width: 768px) {
   .HeroPage {
-      margin-left: 20px;
-      margin-right: 20px;
-      padding-left: 20px;
-      padding-right: 20px;
-      display:block;
+      
   }
 
   .HeroPage nav a {
@@ -113,29 +113,23 @@ background-color: white;
   }
 
   .HeroPage .navbar1 {
-      margin-left: 0;
-      margin-right: 0;
+      
   }
 
   .general {
-      margin-top: 50px;
-      float: none;
-      margin-right: 0;
+     
   }
 
   .About {
-      flex-direction: column;
-      align-items: center;
+      
   }
 
   .About img {
-      width: 100%;
-      height: auto;
+     
   }
 
   .what-we-do {
-      height: auto;
-      padding: 20px;
+     
   }
 
   .what-we-do div {
