--- a/src/index.css
+++ b/src/index.css
@@ -1,101 +1,106 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 /* General Styles */
-body {
-  background-color: #FFF6F6;
-  font-family: Montserrat;
-}
 
 
-h1 {
-  font-size: 350%;
-}
-
-/* HERO PAGE */
-
-
-.HeroPage nav a {
-  padding-left: 200px;
-  text-decoration: none;
-  color: rgb(221, 74, 135);
-  font-size: 20px;
-  cursor: pointer;
-}
-
-/* ABOUT US */
-.general img {
-  padding: 4px;
-  border-radius: 12px;
-}
-
-.container1, .img1 {
-  display: inline-block;
-}
-
-/* WHAT WE DO */
-.what-we-do {
-  display: inline-block;
-  background-color: #1A618B;
-  width: 100%;
-  height: 543px;
-}
-
-/* Form */
-label {
-  display: block;
-  color: #02172C;
-  font-weight: bold;
-  font-family: Montserrat;
-  margin-top: 20px;
-}
-
-input {
-  width: 470px;
-  height: 10px;
-  border-style: hidden;
-  padding: 40px 40px;
-}
-
-textarea {
-  margin-top: 30px;
-  width: 550px;
-  height: 149px;
-  border-style: hidden;
-  display: block;
-}
-
-/* Footer */
-.footer1 {
-  background-color: #1A618B;
-  display: inline-block;
-  color: white;
-  width: 100%;
- 
-
-}
-
-.footer1 div {
-  float: left;
-  padding: 60px;
-}
-
-.footer1 a {
-  text-decoration: none;
-  color: white;
-}
-
-.socials img {
-  padding-left: 20px;
-}
-
-.topbtn{
-position: fixed;
-right: 0;
-border-radius: 100%;
-color: black;
-background-color: white;
-
-
+@media  (min-width: 1025px) {
+  body {
+    background-color: #FFF6F6;
+    font-family: Montserrat;
+  }
+  
+  
+  h1 {
+    font-size: 350%;
+  }
+  
+  /* HERO PAGE */
+  
+  
+  .HeroPage nav a {
+    padding-left: 200px;
+    text-decoration: none;
+    color: rgb(221, 74, 135);
+    font-size: 20px;
+    cursor: pointer;
+  }
+  
+  /* ABOUT US */
+  .general img {
+    padding: 4px;
+    border-radius: 12px;
+  }
+  
+  .container1, .img1 {
+    display: inline-block;
+  }
+  
+  /* WHAT WE DO */
+  .what-we-do {
+    display: inline-block;
+    background-color: #1A618B;
+    width: 100%;
+    height: 543px;
+  }
+  
+  /* Form */
+  label {
+    display: block;
+    color: #02172C;
+    font-weight: bold;
+    font-family: Montserrat;
+    margin-top: 20px;
+  }
+  
+  input {
+    width: 470px;
+    height: 10px;
+    border-style: hidden;
+    padding: 40px 40px;
+  }
+  
+  textarea {
+    margin-top: 30px;
+    width: 550px;
+    height: 149px;
+    border-style: hidden;
+    display: block;
+  }
+  
+  /* Footer */
+  .footer1 {
+    background-color: #1A618B;
+    display: inline-block;
+    color: white;
+    width: 100%;
+   
+  
+  }
+  
+  .footer1 div {
+    float: left;
+    padding: 60px;
+  }
+  
+  .footer1 a {
+    text-decoration: none;
+    color: white;
+  }
+  
+  .socials img {
+    padding-left: 20px;
+  }
+  
+  .topbtn{
+  position: fixed;
+  right: 0;
+  border-radius: 100%;
+  color: black;
+  background-color: white;
+  
+  
+  }
+  
 }
 
 
