--- a/src/index.css
+++ b/src/index.css
@@ -374,7 +374,12 @@ body {
 
 
 /* FOR LARGER  */
-@media (min-width: 992px){
+@media (max-width: 992px){
+
+  body{
+    background-color: blue;
+  }
+
   .HeroPage{
     margin-left: 80px;
     padding-left: 100px;
