--- a/src/index.css
+++ b/src/index.css
@@ -381,8 +381,13 @@ body {
   }
 
   .HeroPage{
-    margin-left: 80px;
+    margin-left: 100px;
     padding-left: 100px;
-    padding-right: 100px;
+    padding-right: 50px;
   }
+
+  .HeroPage nav a{
+    padding-left: 100px;
+  }
+  
 }
