--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
     margin-top: 70px;
     padding-left: 200px;
     padding-right: 180px;
+    justify-content: center;
   }
   
   
@@ -301,6 +302,7 @@
   .general {
     margin-top: 250px;
     float: right;
+
   }
   
   .hero-heading {
@@ -376,8 +378,7 @@
 
 
 /* FOR LARGER  */
-@media (min-width: 2000px){
-
+@media (min-width:2040px) {
   body{
     background-color: green;
   }
