--- a/src/index.css
+++ b/src/index.css
@@ -1,406 +1,22 @@
-
-
-  @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-
-  /* General Styles */
-  body {
-      background-color: #FFF6F6;
-      font-family: Montserrat;
-    }
-  
-    /* External Styles */
-  .HeroPage {
-    margin-left: 150px;
-    margin-top: 70px;
-    padding-left: 200px;
-    padding-right: 180px;
-    justify-content: center;
-  }
-  
-  
-  /* NAVBAR */
-   
-  .HeroPage nav a {
-    padding-left: 200px;
-    text-decoration: none;
-    color: rgb(221, 74, 135);
-    font-size: 20px;
-    cursor: pointer;
-  }
-  
-  .navbar-toggle {
-    display: none;
-    color: #f2f2f2;
-    font-size: 30px;
-    cursor: pointer;
-  }
-  
-  .navbar1{
-    display: inline-block;
-    margin-left: 370px;
-  }
-  
-  .general1{
-    margin-top: 250px;
-    float: right;
-  
-  }
-  
-  .heading{
-    padding-top: 200px;
-    color: #1A618B;
-    margin-top: 290px;
-  
-  }
-  
-  .heading span{
-    font-weight: 800px;
-    font-size: 80px;
-  
-  
-  }
-  
-  /* ABOUT PAGE */
-  .About p{
-    margin-left: 1000px;
-    font-weight: 200px;
-    font-style: inherit;
-  }
-  
-  .About1{
-    padding-top: 100px;
-    margin-right: 50px;
-    color: #1A618B;
-    display: flex;
-    padding-left: 50px;
-    padding-top: 0px;
-  }
-  
-  .About1 .img1{
-    height: 840px;
-    width: 585px;
-  }
-  
-  .about-content{
-    color: #666666;
-    font-size: 20px;
-    line-height: 24px;
-    padding-left: 200px;
-  }
-  
-  .about-content span{
-    font-size: 50px;
-    color: #1A618B;
-    line-height: 60px;
-  
-  }
-  
-  .expereince{
-    display: flex;
-    color: black;
-    padding-left: 250px;
-  
-  }
-  
-  .experience h3{
-    font-size: 49px;
-    line-height: 78px;
-  
-  }
-  
-  .experience p{
-    padding-top: 50px;
-    padding-left: 5px;
-  
-  }
-  
-  
-  /* WHAT WE DO */
-  .what-we-do{
-    padding-top: 120px;
-    padding-left: 300px;
-    color: #FFFFFF;
-    font-weight: 500px;
-    font-size: 20px;
-    line-height: 24px;
-    display: inline-block;
-    background-color: #1A618B;
-    width: 100%;
-    height: 543px;
-  }
-  
-  .what-we-do .we-do-heading{
-    font-size: 36px;
-    padding-left: 550px;
-    font-weight: 800px;
-    color: #EFDAD9;
-  
-  }
-  
-  .section1{
-    padding-left: 30px;
-    width: 450px;
-    height: 168px;
-    float: left;
-  }
-  
-  .section2{
-    padding-left: 30px;
-    width: 374px;
-    height: 168px;
-    float: left;
-  
-  }
-  
-  .section3{
-    padding-left: 30px;
-    width: 374px;
-    height: 168px;
-    float: left;
-  }
-  
-  
-  /* PRODUCT */
-  .Our-Product{
-    color: #1A6168;
-    padding-left: 700px;
-    font-size: 30px;
-    font-weight: 800px;
-  
-  }
-  
-  /* PACKAGING */
-  .packaging{
-    background-color: #C4C6DB;
-    padding-left: 50px;
-    padding-top: 10px;
-    text-align: center;
-    font-size: 21px;
-    height: 700px;
-    width: 100%;
-    display: inline-block;
-  }
-  
-  .packaging h2{
-    color: #000000;
-    font-weight: 1000px;
-  }
-  
-  /* OUR CUSTOMER */
-  .customer{
-    padding-left: 350px;
-    height: 500px;
-    padding-top: 70px;
-  }
-  
-  .customer h2{
-    font-size: 20px;
-    padding-left: 500px;
-    padding-top: 70px;
-  }
-  
-  .customer p{
-    padding-right: 400px;
-    text-align: center;
-  }
-  
-  /* CONTACT */
-  .Contact{
-    background-color: #EFDAD9;
-    padding-top: 50px;
-    padding-left: 500px;
-    height: 750px;
-  
-  }
-  
-  .Contact img{
-    width: 400px;
-    height: 750px;
-    float: left;
-    display: inline;
-    padding-right: 100px;
-  
-  }
-  .Contact h2{
-    color: #e51a49;
-    font-size: 20px;
-  
-  }
-  
-  .contact-bus{
-    color: #1A618B;
-    font-size: 36px;
-  }
-  
-  
-  
-  .navbar1 {
-    display: inline-block;
-    margin-left: 370px;
-  }
-  
-  /* INFO */
-  .footer1{
-    font-size: 20px;
-    background-color: #1A618B;
-      display: inline-block;
-      color: white;
-      width: 100%;
-  
-  }
-  .footer1 div {
-    float: left;
-    padding: 60px;
-  }
-  
-  .footer1 a {
-    text-decoration: none;
-    color: white;
-  }
-  
-  .socials{
-    padding-left: 200px;
-  }
-  
-  
-  .socials ul img{
-    width: 200px;
-    height: 50px;
-    padding-top: 30px;
-  }
-  .socials img {
-    padding-left: 20px;
-  }
-  
-  .info{
-    padding-left: 500px;
-    padding-top: 100px;
-  }
-  
-  /* FOOTER */
-  .footer2{
-    background-color: #e51a49;
-    margin-top: 0px;
-    margin-bottom: 20px;
-    padding-top: 30px;
-    color: white;
-    padding-bottom: 20px;
-    padding-left: 250px;
-    font-weight: 800px;
-    height: 100px;
-  }
-  
-  .footer2 p{
-    font-size: 20px;
-  }
-  .footer2 span{
-    padding-left: 500px;
-    font-size: 20px;
-  
-  }
-  
-  .general {
-    margin-top: 250px;
-    float: right;
-
-  }
-  
-  .hero-heading {
-    padding-top: 200px;
-    color: #1A618B;
-    margin-top: 290px;
-    font-size: 80px;
-    font-weight: 800;
-  }
-  
-  .container1 {
-    margin-top: 300px;
-    padding-left: 550px;
-    display: inline-block;
-  }
-  
-    
-    
-    h1 {
-      font-size: 350%;
-    }
-    
-    /* HERO PAGE */
-    
-   
-  
-  
-  /*   
-    /* ABOUT US */
-    /* .general img {
-      padding: 4px;
-      border-radius: 12px;
-    }
-    
-    .container1, .img1 {
-      display: inline-block;
-    } */
-    
-    /* Form */
-    label {
-      display: block;
-      color: #02172C;
-      font-weight: bold;
-      font-family: Montserrat;
-      margin-top: 20px;
-    }
-    
-    input {
-      width: 470px;
-      height: 10px;
-      border-style: hidden;
-      padding: 40px 40px;
-    }
-    
-    textarea {
-      margin-top: 30px;
-      width: 550px;
-      height: 149px;
-      border-style: hidden;
-      display: block;
-    }
-    
-  
-    .topbtn{
-    position: fixed;
-    right: 0;
-    border-radius: 100%;
-    color: black;
-    background-color: white;
-    }
-
-
-
-/* FOR LARGER  */
-@media (min-width:2040px) {
-  body{
-    background-color: green;
-  }
-
-  .HeroPage{
-    margin-left: 50px;
-    padding-left: 50px;
-    padding-right: 50px;
-  }
-
-  .HeroPage nav a{
-    padding-left: 50px;
-  }
-
-  .general{
-    padding-left: 20px;
-  }
-
+body {
+  background-color: #FFF6F6;
+  font-family:Arial, Helvetica, sans-serif;
 }
 
-@media (max-width: 480px){
-body{
-  background-color: red;
-}
+.my-5 a{
+  padding-left: 150px;
+
   
+}
+.my-5 {
+  color: #F5168D;
+}
+.socials a {
+  padding-left: 15px;
+}
+.nav-item a{
+padding-right: 500px;
+cursor: pointer;
+text-decoration: none;
+color: #F5168D;
 }
